deploy/k8s/base/supabase-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supabase-app
  labels:
    app.kubernetes.io/part-of: iotgw-ng
